[package]
name = "make_arrow"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "45.0.0"
clap = { version = "4.0.29", features = ["derive"] }
env_logger = "0.10.0"
log = "0.4.17"
rust-htslib = "0.44.1"
unzip-n = "0.1.2"

[dev-dependencies]
ctor = "0.1.26"
